--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,29 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: "Blinker";
+}
+
+body {
+  background-color: #0E1217;
+  color: #FFF;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #FFF;
+  opacity: 0.7;
+  transition: .3s;
+}
+
+a:hover {
+  opacity: 1;
+}
+
+p {
+  color: #A9ABB3;
 }
